--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "eslint-loader": "2.1.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
